# display_hardware_test

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  README.md  README_zh.md  build_release.sh
cmake/: windows-cross.cmake
res/: app.rc
scripts/: fetch_windows_deps.sh
src/: display_hardware_test.cpp  main.cpp  monitor_test.cpp  shader.cpp  text_renderer.cpp
src/include/: display_hardware_test.h  monitor_test.h  shader.h  text_renderer.h
